[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apcore-toolkit"
version = "0.6.0"
description = "Shared scanner, schema extraction, and output toolkit for apcore framework adapters"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "aiperceivable", email = "tercel.yi@gmail.com" },
]
keywords = [
    "apcore",
    "mcp",
    "scanner",
    "schema",
    "yaml",
    "pydantic",
    "openapi",
    "toolkit",
]
dependencies = [
    "apcore>=0.20.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
http-proxy = ["httpx>=0.24"]
json-schema = ["jsonschema>=4.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.9",
    "mypy>=1.0",
    "apdev[dev]>=0.2.1",
    "httpx>=0.24",
]

[project.urls]
Homepage = "https://aiperceivable.com"
Repository = "https://github.com/aiperceivable/apcore-toolkit-python"
Documentation = "https://github.com/aiperceivable/apcore-toolkit-python#readme"
Issues = "https://github.com/aiperceivable/apcore-toolkit-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/apcore_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120

[tool.apdev]
base_package = "apcore_toolkit"
src_dir = "src"

[tool.mypy]
python_version = "3.11"
strict = true
